--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,11 +1,11 @@
 spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.data=classpath:schema-test.sql
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.platform=h2
 spring.datasource.driver-class-name=org.h2.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
