--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,23 @@
 		</dependency>
 		
 		<dependency>
+		  <groupId>com.google.guava</groupId>
+		  <artifactId>guava</artifactId>
+		  <version>11.0.2</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+        
+        <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    </dependency>
+        
+		<dependency>
 		    <groupId>org.mockito</groupId>
 		    <artifactId>mockito-junit-jupiter</artifactId>
 		    <scope>test</scope>
@@ -86,3 +103,4 @@
 	</pluginRepositories>
 
 </project>
+
