--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:~/test
 spring.datasource.driver-class-name=org.h2.Driver
 
+spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
